--- a/grunt/tmpl/sprite-retina-mustache.scss
+++ b/grunt/tmpl/sprite-retina-mustache.scss
@@ -13,12 +13,12 @@
 .iti-flag {
   $item-width-maps: ({{#items}}{{strings.name}}: {{px.width}}, {{/items}});
   $standard-country: 'ac';
-  width: retina-size(map-get($item-width-maps, $standard-country));
+  width: map-get($item-width-maps, $standard-country);
 
   @each $key, $width in $item-width-maps {
     @if $width != map-get($item-width-maps, $standard-country) {
       &.#{$key} {
-        width: retina-size($width);
+        width: $width;
       }
     }
   }
@@ -30,13 +30,13 @@
   only screen and (        min-device-pixel-ratio: 2),
   only screen and (                min-resolution: 192dpi),
   only screen and (                min-resolution: 2dppx) {
-    @include retina-bg-size({{spritesheet.px.width}}, {{spritesheet.px.height}});
+    background-size: {{spritesheet.px.width}} {{spritesheet.px.height}};
   }
 
   {{#items}}
   &.{{strings.name}} {
-    height: retina-size({{px.height}});
-    background-position: retina-size({{px.offset_x}}) retina-size({{px.offset_y}});
+    height: {{px.height}};
+    background-position: {{px.offset_x}} {{px.offset_y}};
   }
   {{/items}}
 }
