--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -243,9 +243,10 @@ $flagsImageExtension: "png" !default;
   height: $flagHeight;
   box-shadow: 0px 0px 1px 0px #888;
   background-image: url("#{$flagsImagePath}#{$flagsImageName}.#{$flagsImageExtension}");
+  background-repeat: no-repeat;
   // empty state
   background-color: #DBDBDB;
-  background-position: 100% 100%;
+  background-position: $flagWidth 0;
 
   @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
     background-image: url("#{$flagsImagePath}#{$flagsImageName}@2x.#{$flagsImageExtension}");
