Add support for container option

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -229,6 +229,11 @@ $flagsImageExtension: "png" !default;
     height: 100%;
     opacity: 0;
   }
+
+  // if container option is set, increase z-index to prevent display issues
+  &.iti-container {
+    z-index: 1060;
+  }
 }
 
 
