--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -220,6 +220,16 @@ Plugin.prototype = {
       "class": "arrow"
     }).appendTo(selectedFlag);
 
+    if (this.options.container) {
+      this.$drop = $("<div>", {
+        "class": "intl-tel-input iti-container"
+      });
+      
+      $("<div>", {
+        "class": "flag-dropdown"
+      }).appendTo(this.$drop).append(this.countryList);
+    }
+
     // country list
     // mobile is just a native select element
     // desktop is a proper list containing: preferred countries, then divider, then all countries
@@ -766,22 +776,14 @@ Plugin.prototype = {
     var cssTop = (!dropdownFitsBelow && dropdownFitsAbove) ? "-" + (this.dropdownHeight - 1) + "px" : "";
     this.countryList.css("top", cssTop);
     
-    // if container, append countryList to this.$drop and this.$drop to container
-    if (this.options.container) {        
-      this.$drop = $("<div>", {
-        "class": "intl-tel-input iti-container"
-      });
-      
-      var $dropInner = $("<div>", {
-        "class": "flag-dropdown"
-      }).appendTo(this.$drop),
-        inputHeight = !dropdownFitsBelow && dropdownFitsAbove ? 0 : that.telInput.outerHeight();
+    // if container calculate postion and append this.$drop to container
+    if (this.options.container) {      
+      var inputHeight = !dropdownFitsBelow && dropdownFitsAbove ? 0 : that.telInput.outerHeight();
       
       // calculate placement
-      that.$drop.css({
+      this.$drop.css({
         "top": pos.top + inputHeight - parseInt(this.telInput.css('borderTopWidth'), 10) - parseInt(this.telInput.css('borderBottomWidth'), 10),
-        "left": pos.left,
-        "position": "absolute"
+        "left": pos.left
       });
       
       // close menu on resize/scroll
@@ -790,7 +792,6 @@ Plugin.prototype = {
       });
       
       this.$drop.appendTo(this.options.container);
-      $dropInner.append(this.countryList);
     }
   },
 
