--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -23,7 +23,9 @@ var pluginName = "intlTelInput",
     // the countries at the top of the list. defaults to united states and united kingdom
     preferredCountries: ["us", "gb"],
     // specify the path to the libphonenumber script to enable validation/formatting
-    utilsScript: ""
+    utilsScript: "",
+    // prepend a custom message to placeholder, for instance: "e.g."
+    prePlaceholderMessage: ""
   },
   keys = {
     UP: 38,
@@ -1012,6 +1014,7 @@ Plugin.prototype = {
       var iso2 = this.selectedCountryData.iso2,
         numberType = intlTelInputUtils.numberType[this.options.numberType || "FIXED_LINE"],
         placeholder = (iso2) ? intlTelInputUtils.getExampleNumber(iso2, this.options.nationalMode, numberType) : "";
+      placeholder = this.options.prePlaceholderMessage.concat(placeholder);
       this.telInput.attr("placeholder", placeholder);
     }
   },
