--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -765,8 +765,7 @@ Plugin.prototype = {
 
   // decide where to position dropdown (depends on position within viewport, and scroll)
   _setDropdownPosition: function() {
-    var that = this,
-      pos = this.telInput.offset(),
+    var pos = this.telInput.offset(),
       inputTop = pos.top,
       windowTop = $(window).scrollTop(),
       // dropdownFitsBelow = (dropdownBottom < windowBottom)
@@ -779,7 +778,7 @@ Plugin.prototype = {
     
     // if container calculate postion and append this.$drop to container
     if (this.options.dropdownContainer && !this.isMobile) {
-      var inputHeight = !dropdownFitsBelow && dropdownFitsAbove ? 0 : that.telInput.outerHeight();
+      var inputHeight = !dropdownFitsBelow && dropdownFitsAbove ? 0 : this.telInput.outerHeight();
       
       // calculate placement
       this.$drop.css({
