--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -430,6 +430,7 @@ Plugin.prototype = {
           }
           // tell all instances the auto country is ready
           // TODO: this should just be the current instances
+          // UPDATE: use setTimeout in case their geoIpLookup function calls this callback straight away (e.g. if they have already done the geo ip lookup somewhere else). Using setTimeout means that the current thread of execution will finish before executing this, which allows the plugin to finish initialising.
           setTimeout(function() {
             $(".intl-tel-input input").intlTelInput("autoCountryLoaded");
           });
