--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -230,10 +230,10 @@ $flagsImageExtension: "png" !default;
     opacity: 0;
   }
 
-  // if container option is set, increase z-index to prevent display issues
+  // if dropdownContainer option is set, increase z-index to prevent display issues
   &.iti-container {
     position: absolute;
-    z-index: 1060;
+    z-index: 1060; // higher than default Bootstrap modal z-index of 1050
   }
 }
 
