--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1015,6 +1015,11 @@ Plugin.prototype = {
       var iso2 = this.selectedCountryData.iso2,
         numberType = intlTelInputUtils.numberType[this.options.numberType || "FIXED_LINE"],
         placeholder = (iso2) ? intlTelInputUtils.getExampleNumber(iso2, this.options.nationalMode, numberType) : "";
+
+      if (typeof this.options.customPlaceholder === 'function') {
+        placeholder = this.options.customPlaceholder(placeholder, this.selectedCountryData);
+      }
+
       this.telInput.attr("placeholder", placeholder);
     }
   },
