Remove jQuery dependency
The library now works without jQuery using native Javascript.
jQuery is now only a development dependency for tests using
jasmine-jquery matchers.

However, the jQuery plugin is still added if jQuery is defined.

Some caveats:
1- I am not very confident of src/js/wrapper.js.ejs correctness.
2- The minimized version produces errors when jQuery is not defined
  while the non-minfied version works correctly. This is probably
  because of some hacky behavior in the tooling. Most likely in
  grunt/replace.js. In addition, appearantly, replace tasks aren't
  applied to all files (e.g: some files spec/). Anyways, I personally
  think that grunt/replace.js should be replaced by a more
  conventional solution; if library size is so important then all
  scripts that are always used should be concatenated, uglified and
  gzipped.

--- a/src/js/wrapper.js.ejs
+++ b/src/js/wrapper.js.ejs
@@ -1,18 +1,31 @@
 // wrap in UMD - see https://github.com/umdjs/umd/blob/master/jqueryPluginCommonjs.js
 (function (factory) {
   if (typeof define === "function" && define.amd) {
-    define(["jquery"], function($) {
-      factory($, window, document);
-    });
-  } else if (typeof module === "object" && module.exports) {
-    module.exports = factory(require("jquery"), window, document);
-  } else {
-    factory(jQuery, window, document);
+    try {
+      define("intl-tel-input", ["jquery"], function($) {
+        factory($, window, document);
+      });
+    }
+    catch (ex) {
+      define("intl-tel-input", function() {
+        factory(false, window, document);
+      });
+    }
+  }
+  else if (typeof (module) !== "undefined") {
+    try        { factory(require("jquery"), window, document); }
+    catch (ex) { factory(false, window, document);             }
+  }
+  else {
+    if (typeof (jQuery) !== "undefined") { factory(jQuery, window, document); }
+    else                                 { factory(false, window, document);  }
   }
 }(function ($, window, document, undefined) {
   "use strict";
 
   <%- plugin %>
   <%- data %>
+
+  return IntlTelInput;
 
 }));
