--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -788,6 +788,11 @@ Plugin.prototype = {
         "top": pos.top + inputHeight,
         "left": pos.left
       });
+
+      // close menu on body scroll
+      $("body").off("scroll" + this.ns).on("scroll" + this.ns, function () {
+        if (!that.countryList.hasClass("hide")) that._closeDropdown();
+      });
       
       this.dropdown.appendTo(this.options.dropdownContainer);
     }
