--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -791,7 +791,7 @@ Plugin.prototype = {
       });
 
       // close menu on body scroll
-      $("body").off("scroll" + this.ns).on("scroll" + this.ns, function () {
+      $("body").on("scroll" + this.ns, function () {
         that._closeDropdown();
       });
       
