flag-dropdown -> flag-container

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -95,7 +95,7 @@ $flagsImageExtension: "png" !default;
     background-color: #FFC7C7;
   }
 
-  .flag-dropdown {
+  .flag-container {
     // positioned over the top of the input
     position: absolute;
     // full height
@@ -105,14 +105,14 @@ $flagsImageExtension: "png" !default;
     padding: $borderWidth;
   }
   // hover state - show flag is clickable
-  .flag-dropdown:hover {
+  .flag-container:hover {
     cursor: pointer;
     .selected-flag {
       background-color: $hoverColor;
     }
   }
   // disable hover state when input is disabled
-  input[disabled] + .flag-dropdown:hover, input[readonly] + .flag-dropdown:hover {
+  input[disabled] + .flag-container:hover, input[readonly] + .flag-container:hover {
     cursor: default;
     .selected-flag {
       background-color: transparent;
@@ -235,7 +235,7 @@ $flagsImageExtension: "png" !default;
     position: absolute;
     top: 0;
     left: 0;
-    // to keep consistent with .flag-dropdown
+    // to keep consistent with .flag-container
     padding: $borderWidth;
     z-index: 1060; // higher than default Bootstrap modal z-index of 1050
   }
