--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -203,7 +203,7 @@ Plugin.prototype = {
     }));
 
     this.flagsContainer = $("<div>", {
-      "class": "flag-dropdown"
+      "class": "flag-container"
     }).insertBefore(this.telInput);
 
     // currently selected flag (displayed to left of input)
