--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -23,7 +23,9 @@ var pluginName = "intlTelInput",
     // the countries at the top of the list. defaults to united states and united kingdom
     preferredCountries: ["us", "gb"],
     // specify the path to the libphonenumber script to enable validation/formatting
-    utilsScript: ""
+    utilsScript: "",
+    // format intlTelInput for right-to-left languages
+    rtl: false
   },
   keys = {
     UP: 38,
@@ -199,6 +201,8 @@ Plugin.prototype = {
     this.telInput.wrap($("<div>", {
       "class": "intl-tel-input"
     }));
+    
+    this.telInputRootElement = this.telInput.parent();
 
     this.flagsContainer = $("<div>", {
       "class": "flag-dropdown"
@@ -245,6 +249,11 @@ Plugin.prototype = {
 
       // this is useful in lots of places
       this.countryListItems = this.countryList.children(".country");
+    }
+    
+    // add the RTL class if requested
+    if(this.options.rtl === true) {
+    	this.telInputRootElement.addClass("iti-rtl");
     }
   },
 
