use dropup class instead of cssTop calc

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -166,6 +166,12 @@ $flagsImageExtension: "png" !default;
     // popup so render above everything else
     z-index: 2;
 
+    // place menu above the input element
+    &.dropup {
+      bottom: 100%;
+      margin-bottom: (-$borderWidth);
+    }
+
     // inline flags
     .flag {
       display: inline-block;
