--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -163,11 +163,13 @@ Plugin.prototype = {
     // process onlyCountries option
     if (this.options.onlyCountries.length) {
       this.processCountries(this.options.onlyCountries, function(inArray) {
+        // if country is in array
         return (inArray != -1);
       });
     // process excludeCountries option
     } else if (this.options.excludeCountries.length) {
       this.processCountries(this.options.excludeCountries, function(inArray) {
+        // if country is not in array
         return (inArray == -1);
       });
     } else {
